# Yujin-Seo

./: README.md
Django/: .gitignore  pyproject.toml
Django/accounts/: models.py  serializers.py  urls.py  views.py
Django/accounts/migrations/: 0001_initial.py
Django/config/: settings.py  urls.py
Django/posts/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
Django/posts/migrations/: 0001_initial.py  0002_comment.py  0003_comment_likes_count_comment_parent_comment_writer.py  0004_remove_comment_parent.py  0005_comment_nickname_alter_post_writer.py  0006_category_alter_post_id_post_categories.py  0007_alter_post_categories.py
likelion14th/config/: settings.py
likelion14th/posts/: urls.py  views.py
likelion14th/posts/templates/: index.html
